--- a/css/styles.scss
+++ b/css/styles.scss
@@ -210,8 +210,7 @@ body {
     margin-top: 0.5rem;
     border-spacing: 0px 0px;
     border: 3px solid black;
-    border-radius: 20px;
-
+    
     tr td {
       font-family: $item-font-stack;
       font-size: 1.2rem;
@@ -248,7 +247,8 @@ body {
   grid-area: 9 / 1 / 11 / 13;
   background-color: $pink;
   display: flex;
-  flex-flow: row wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .menu-header {
@@ -262,13 +262,14 @@ body {
 }
 
 .category {
-  max-width: 50%;
+  width: 100%;
   margin: 3rem auto 0 auto;
   border-spacing: 3rem 2rem;
-  
+
   thead tr {
     td {
       font-size: 2.4rem;
+      max-width: 50%;
     }
 
     .heading {
